Bug 305602 - Sort order changes when expanding artist (same artist, different letter case)
Summary: Sort order changes when expanding artist (same artist, different letter case)
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collection Browser (other bugs)
Version First Reported In: 2.6.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-22 14:07 UTC by Lucas Sallovitz
Modified: 2013-02-16 12:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
step 1 (7.07 KB, image/png)
2012-08-22 14:08 UTC, Lucas Sallovitz
Details
step 2 (14.98 KB, image/png)
2012-08-22 14:09 UTC, Lucas Sallovitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas Sallovitz 2012-08-22 14:07:22 UTC
I have a collection mounted over cifs (don't know if it's relevant) where I apparently have differnt casing for the same artist on some of my files (Pearl Jam - pearl jam).  When I try to expand one of the versions, the sorting between the version changes.

PS: I really don't like that it's shown as different artists, but I guess that's a different story, 

Reproducible: Always

Steps to Reproduce:
1. Have artists "Pearl Jam" and "pearl jam" in the collection
2. See that Pearl Jam is listed before pearl jam
3. Expand Pearl Jam

Actual Results:  
Pearl Jam is expanded

Expected Results:  
Pearl Jam is expanded and "moved" bellow pearl jam
Comment 1 Lucas Sallovitz 2012-08-22 14:08:46 UTC
Created attachment 73386 [details]
step 1
Comment 2 Lucas Sallovitz 2012-08-22 14:09:06 UTC
Created attachment 73387 [details]
step 2
Comment 3 Myriam Schweingruber 2012-08-23 09:59:30 UTC
Well, id3 tags are case sensitive, you should make sure all your tags are respecting the same scheme.
Not a bug IMHO as it is not Amarok's fault if the user has different tagging schemes for the same artist.
Comment 4 Lucas Sallovitz 2012-08-23 13:05:39 UTC
Sorry I think you missunderstand the issue, I know the sorting is case sensitive (tho I don't like it), but the problem is that the order changes when I expand an artist, I click on an artist name and it moves, leaving the mouse pointer over a different one, and opening the album list bellow making it look like the wrong artist exanded, please check the screenshots.
Comment 5 Ralf Engels 2012-08-23 13:48:49 UTC
I can reproduce your problem.

It seems that our sort order currently is like this:

1. lower case artist
2. unexpanded on top
3. last resort: the non-lower case artist

That means that an unexpanded "pearl jam" is after an an unexpanded "Pearl Jam" is before an expanded "Pearl Jam".
Comment 6 Ralf Engels 2013-02-16 12:42:22 UTC
Git commit 8eee7edbe130aa3d3b7d7ddbd5dba9e1826fce3f by Ralf Engels.
Committed on 14/02/2013 at 13:53.
Pushed by rengels into branch 'master'.

Sort order changes when expanding categories in collection

Now we enforcing a sort order even if the name is the same which
leads to the beneficial effect that "Various Artists" don't move
to the end if expanded.
FIXED-IN: 2.8

M  +1    -0    ChangeLog
M  +62   -33   src/browsers/CollectionSortFilterProxyModel.cpp
M  +10   -6    src/browsers/CollectionSortFilterProxyModel.h
M  +0    -5    src/browsers/CollectionTreeView.cpp

http://commits.kde.org/amarok/8eee7edbe130aa3d3b7d7ddbd5dba9e1826fce3f