Sort order changes when expanding categories in collection

Now we enforcing a sort order even if the name is the same which
leads to the beneficial effect that "Various Artists" don't move
to the end if expanded.

BUG: 305602
FIXED-IN: 2.8